--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -25,6 +25,10 @@ input {
     margin: 5px 0;
 }
 
+.neon {
+    text-shadow: 1px 1px 8px #ff0;
+}
+
 .main {
     text-align: center;
     font-size: 2.6rem;
@@ -38,7 +42,7 @@ input {
 .login-container label,
 .login-container input {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .login-container button {
@@ -47,10 +51,7 @@ input {
 }
 
 .btnlogin {
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding: 8px;
     font-size: 2rem;
     border-radius: 8px;
     border-color: #189e0c;
