--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -13,10 +13,9 @@
 
 body {
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    justify-content: center;
+    min-height: 100vh
 }
 
 input {
@@ -78,4 +77,21 @@ h2 {
     position: absolute;
     align-items: center;
     align-content: center;
+}
+
+
+
+.loader {
+    animation: is-rotating 1s infinite;
+    border: 6px solid #e5e5e5;
+    border-top-color:#51d4db;
+    height: 50px;
+    width: 50px; 
+    border-radius: 50%;
+}
+
+@keyframes is-rotating {
+    to {
+    transform: rotate(2turn);
+    }
 }
