--- a/libs/css/styles-main.css
+++ b/libs/css/styles-main.css
@@ -3,6 +3,41 @@ h1 {
     text-shadow: 3px 3px 3px rgb(47, 73, 8);
 }
 
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(200, 200, 200);
+    letter-spacing: 1px;
+    font-family: sans-serif;
+    font-size: 0.8rem;
+    background-color: rgba(190, 185, 185, 0.856);
+}
+
+td,
+th {
+    border: 1px solid rgb(190, 190, 190);
+    padding: 10px;
+    width: 16%;
+    font-size: 1rem;
+}
+
+td {
+    text-align: center;
+    width: 16%;
+}
+
+.icones {
+    font-size: 2em;
+    cursor: pointer;
+}
+
+.delete {
+    color: tomato;
+}
+
+.edit {
+    color: rgb(51, 155, 30);
+}
+
 .register_main, .list_main {
     width: 70%;
     height: 80%;
@@ -54,4 +89,3 @@ h1 {
     color:  rgb(202, 52, 6);
     background-color: rgb(199, 197, 82);
 }
-
